WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70587
[GTK] Fix API documentation comment for webkit_web_view_get_estimated_load_progress()
https://bugs.webkit.org/show_bug.cgi?id=70587
Summary
[GTK] Fix API documentation comment for webkit_web_view_get_estimated_load_pr...
Carlos Garcia Campos
Reported
2011-10-21 01:21:04 PDT
It's should start with /** to be recognized as API documentation.
Attachments
Patch
(1.24 KB, patch)
2011-10-21 01:22 PDT
,
Carlos Garcia Campos
pnormand
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-10-21 01:22:58 PDT
Created
attachment 111920
[details]
Patch
Carlos Garcia Campos
Comment 2
2011-10-21 01:44:01 PDT
Committed
r98086
: <
http://trac.webkit.org/changeset/98086
>
Carlos Garcia Campos
Comment 3
2011-10-21 05:04:40 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 4
2011-10-21 05:06:29 PDT
(In reply to
comment #3
)
> Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Sorry, I was trying the new watchlist, I thought apply-watchlist-local didn't actually update the bug :-P
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug