[GTK] Fix API documentation comment for webkit_web_view_get_estimated_load_progress() https://bugs.webkit.org/show_bug.cgi?id=70587

Reviewed by Philippe Normand.

It's should start with /** to be recognized as API documentation.

* UIProcess/API/gtk/WebKitWebView.cpp:

Canonical link: https://commits.webkit.org/86793@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98086 268f45cc-cd09-0410-ab3c-d52691b4dbfc